Añadiendo controlador para novedades poscontractuales con poliza #4
