# models/tr_novedad_poscontractual.go
@@ -13,6 +13,12 @@ type TrNovedadesPoscontractuales struct {
 	Propiedad             *[]Propiedad
 	//Poliza                *Poliza
 }
+type TrNovedadesPoscontractualesPoliza struct {
+	NovedadPoscontractual *NovedadesPoscontractuales
+	Fechas                *[]Fechas
+	Propiedad             *[]Propiedad
+	Poliza                *[]Poliza
+}
 
 // AddTransaccionProyectoAcademica Transacción para registrar toda la información de un proyecto academico
 func AddTransaccionNovedadPoscontractualNoPoliza(m *TrNovedadesPoscontractuales) (err error) {
@@ -39,6 +45,64 @@ func AddTransaccionNovedadPoscontractualNoPoliza(m *TrNovedadesPoscontractuales)
 		}
 
 		for _, v := range *m.Propiedad {
+			v.IdNovedadesPoscontractuales.Id = int(idNovedad)
+			v.FechaCreacion = horaRegistro
+			v.FechaModificacion = horaRegistro
+			if _, errTr = o.Insert(&v); errTr != nil {
+				err = errTr
+				fmt.Println(err)
+				_ = o.Rollback()
+				return
+			}
+		}
+
+		_ = o.Commit()
+	} else {
+		err = errTr
+		fmt.Println(err)
+		_ = o.Rollback()
+	}
+
+	return
+}
+
+// AddTransaccionProyectoAcademica Transacción para registrar toda la información de un proyecto academico
+func AddTransaccionNovedadPoscontractualPoliza(m *TrNovedadesPoscontractualesPoliza) (err error) {
+	o := orm.NewOrm()
+	err = o.Begin()
+
+	horaRegistro := time_bogota.TiempoBogotaFormato()
+	m.NovedadPoscontractual.FechaCreacion = horaRegistro
+	m.NovedadPoscontractual.FechaModificacion = horaRegistro
+
+	if idNovedad, errTr := o.Insert(m.NovedadPoscontractual); errTr == nil {
+		fmt.Println(idNovedad)
+
+		for _, v := range *m.Fechas {
+			v.IdNovedadesPoscontractuales.Id = int(idNovedad)
+			v.FechaCreacion = horaRegistro
+			v.FechaModificacion = horaRegistro
+			if _, errTr = o.Insert(&v); errTr != nil {
+				err = errTr
+				fmt.Println(err)
+				_ = o.Rollback()
+				return
+			}
+		}
+
+		for _, v := range *m.Propiedad {
+			v.IdNovedadesPoscontractuales.Id = int(idNovedad)
+			v.FechaCreacion = horaRegistro
+			v.FechaModificacion = horaRegistro
+			if _, errTr = o.Insert(&v); errTr != nil {
+				err = errTr
+				fmt.Println(err)
+				_ = o.Rollback()
+				return
+			}
+		}
+
+		for _, v := range *m.Poliza {
 			v.IdNovedadesPoscontractuales.Id = int(idNovedad)
 			v.FechaCreacion = horaRegistro
 			v.FechaModificacion = horaRegistro
